samples/_failures_safe/1761688236_b927f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0423582d.c: In function ‘main’:
./samples/SAFE/__tmp_0423582d.c:152:5: error: expected identifier at end of input
  152 |     b.
      |     ^
./samples/SAFE/__tmp_0423582d.c:152:5: error: expected declaration or statement at end of input
